<?xml version="1.0"?>
<package format="3">
  <name>da2_rgbd_publisher</name>
  <version>0.0.1</version>
  <description>Depth Anything v2 RGB-D publisher for RTAB-Map</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
