<?xml version="1.0"?>
<package format="3">
  <name>zoe_rgbd_publisher</name>
  <version>0.1.0</version>
  <description>MP4 → RGB, ZoeDepth → Depth, CameraInfo</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
